Refactor Source & Job data model and Stop Duplicate Ingestion Jobs (#685)
* Rebase & squash on master

* Fix java unit tests

* Rebase on JobService PR fix

* Update JobUpdateTask's createJobId() to generate id based on source config instead of id.

* Fix wrong conflict resolve in FeatureStreamConfig

Co-authored-by: Zhu Zhanyan <program.nom@gmail.com>