@@ -23,11 +23,14 @@ import static org.hamcrest.core.IsEqual.equalTo;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.initMocks;
 
+import feast.core.job.JobUpdateTask.JobTargetStatus;
 import feast.core.model.*;
-import feast.core.util.ModelHelpers;
+import feast.core.util.TestUtil;
 import feast.proto.core.FeatureSetProto;
 import feast.proto.core.FeatureSetProto.FeatureSetMeta;
 import feast.proto.core.FeatureSetProto.FeatureSetSpec;
@@ -96,18 +99,21 @@ public class JobUpdateTaskTest {
   }
 
   Job makeJob(String extId, List<FeatureSet> featureSets, JobStatus status) {
-    return new Job(
-        "job",
-        extId,
-        RUNNER,
-        source,
-        store,
-        ModelHelpers.makeFeatureSetJobStatus(featureSets),
-        status);
+    return Job.builder()
+        .setId("job")
+        .setExtId(extId)
+        .setRunner(RUNNER)
+        .setSource(source)
+        .setStore(store)
+        .setFeatureSetJobStatuses(TestUtil.makeFeatureSetJobStatus(featureSets))
+        .setStatus(status)
+        .build();
   }
 
-  JobUpdateTask makeTask(List<FeatureSet> featureSets, Optional<Job> currentJob) {
-    return new JobUpdateTask(featureSets, source, store, currentJob, jobManager, 100L);
+  JobUpdateTask makeTask(
+      List<FeatureSet> featureSets, Optional<Job> currentJob, JobTargetStatus targetStatus) {
+    return new JobUpdateTask(
+        featureSets, source, store, currentJob, jobManager, 100L, targetStatus);
   }
 
   @Test
@@ -118,7 +124,8 @@ public class JobUpdateTaskTest {
     List<FeatureSet> newFeatureSetsPopulatedByJob = Arrays.asList(featureSet1, featureSet2);
 
     Job originalJob = makeJob("old_ext", existingFeatureSetsPopulatedByJob, JobStatus.RUNNING);
-    JobUpdateTask jobUpdateTask = makeTask(newFeatureSetsPopulatedByJob, Optional.of(originalJob));
+    JobUpdateTask jobUpdateTask =
+        makeTask(newFeatureSetsPopulatedByJob, Optional.of(originalJob), JobTargetStatus.RUNNING);
     Job submittedJob = makeJob("old_ext", newFeatureSetsPopulatedByJob, JobStatus.RUNNING);
 
     Job expected = makeJob("new_ext", newFeatureSetsPopulatedByJob, JobStatus.PENDING);
@@ -131,11 +138,12 @@ public class JobUpdateTaskTest {
   @Test
   public void shouldCreateJobIfNotPresent() {
     var featureSets = Collections.singletonList(featureSet1);
-    JobUpdateTask jobUpdateTask = spy(makeTask(featureSets, Optional.empty()));
-    doReturn("job").when(jobUpdateTask).createJobId("KAFKA/servers:9092/topic", "test");
+    JobUpdateTask jobUpdateTask =
+        spy(makeTask(featureSets, Optional.empty(), JobTargetStatus.RUNNING));
+    doReturn("job").when(jobUpdateTask).createJobId(source, "test");
 
     Job expectedInput = makeJob("", featureSets, JobStatus.PENDING);
-    Job expected = makeJob("ext", featureSets, JobStatus.PENDING);
+    Job expected = makeJob("ext", featureSets, JobStatus.RUNNING);
 
     when(jobManager.startJob(expectedInput)).thenReturn(expected);
 
@@ -147,7 +155,8 @@ public class JobUpdateTaskTest {
   public void shouldUpdateJobStatusIfNotCreateOrUpdate() {
     var featureSets = Collections.singletonList(featureSet1);
     Job originalJob = makeJob("ext", featureSets, JobStatus.RUNNING);
-    JobUpdateTask jobUpdateTask = makeTask(featureSets, Optional.of(originalJob));
+    JobUpdateTask jobUpdateTask =
+        makeTask(featureSets, Optional.of(originalJob), JobTargetStatus.RUNNING);
 
     when(jobManager.getJobStatus(originalJob)).thenReturn(JobStatus.ABORTING);
     Job updated = jobUpdateTask.call();
@@ -158,8 +167,9 @@ public class JobUpdateTaskTest {
   @Test
   public void shouldReturnJobWithErrorStatusIfFailedToSubmit() {
     var featureSets = Collections.singletonList(featureSet1);
-    JobUpdateTask jobUpdateTask = spy(makeTask(featureSets, Optional.empty()));
-    doReturn("job").when(jobUpdateTask).createJobId("KAFKA/servers:9092/topic", "test");
+    JobUpdateTask jobUpdateTask =
+        spy(makeTask(featureSets, Optional.empty(), JobTargetStatus.RUNNING));
+    doReturn("job").when(jobUpdateTask).createJobId(source, "test");
 
     Job expectedInput = makeJob("", featureSets, JobStatus.PENDING);
     Job expected = makeJob("", featureSets, JobStatus.ERROR);
@@ -178,7 +188,13 @@ public class JobUpdateTaskTest {
     JobUpdateTask jobUpdateTask =
         spy(
             new JobUpdateTask(
-                featureSets, source, store, Optional.empty(), jobManager, timeoutSeconds));
+                featureSets,
+                source,
+                store,
+                Optional.empty(),
+                jobManager,
+                timeoutSeconds,
+                JobTargetStatus.RUNNING));
 
     Job actual = jobUpdateTask.call();
     assertThat(actual, is(IsNull.nullValue()));
@@ -191,13 +207,7 @@ public class JobUpdateTaskTest {
     when(jobManager.getJobStatus(job)).thenReturn(JobStatus.RUNNING);
 
     JobUpdateTask jobUpdateTask =
-        new JobUpdateTask(
-            Collections.singletonList(featureSet1),
-            source,
-            store,
-            Optional.of(job),
-            jobManager,
-            0L);
+        makeTask(List.of(featureSet1), Optional.of(job), JobTargetStatus.RUNNING);
 
     jobUpdateTask.call();
 
@@ -214,14 +224,7 @@ public class JobUpdateTaskTest {
     job.getFeatureSetJobStatuses().forEach(j -> j.setDeliveryStatus(STATUS_DELIVERED));
 
     JobUpdateTask jobUpdateTask2 =
-        new JobUpdateTask(
-            Arrays.asList(featureSet1, featureSet2),
-            source,
-            store,
-            Optional.of(job),
-            jobManager,
-            0L);
-
+        makeTask(List.of(featureSet1, featureSet2), Optional.of(job), JobTargetStatus.RUNNING);
     jobUpdateTask2.call();
 
     FeatureSetJobStatus expectedStatus2 = new FeatureSetJobStatus();
@@ -233,5 +236,22 @@ public class JobUpdateTaskTest {
 
     assertThat(
         job.getFeatureSetJobStatuses(), containsInAnyOrder(expectedStatus1, expectedStatus2));
+  }
+
+  @Test
+  public void shouldStopJobIfTargetStatusIsAbort() {
+    var featureSets = Collections.singletonList(featureSet1);
+    Job originalJob = makeJob("ext", featureSets, JobStatus.RUNNING);
+    JobUpdateTask jobUpdateTask =
+        makeTask(featureSets, Optional.of(originalJob), JobTargetStatus.ABORTED);
+
+    Job expected = makeJob("ext", featureSets, JobStatus.ABORTING);
+
+    when(jobManager.getJobStatus(originalJob)).thenReturn(JobStatus.ABORTING);
+    when(jobManager.abortJob(originalJob)).thenReturn(expected);
+
+    Job actual = jobUpdateTask.call();
+    verify(jobManager, times(1)).abortJob(originalJob);
+    assertThat(actual, equalTo(expected));
   }
 }
